# gap-mcp

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
gap_mcp/: __init__.py  gap_runner.py  server.py
gap_mcp.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
tests/: conftest.py  test_gap_runner.py  test_server_tools.py
